<resources>
    <string name="app_name">Enliven</string>
    <string name="title_item1">Navike</string>
    <string name="title_item2">Raspoloženje</string>
    <string name="title_item3">San</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ambient_info">Ambijentalni zvuk se odnosi na pozadinsku buku koja je prisutna na datoj sceni ili lokaciji. To može uključivati zvukove poput kiše, saobraćaja, cvrčaka, ptica itd.</string>
    <string name="ambient_info2">Istraživači su otkrili da su sudionici istraživanja bolje rješavali kognitivne zadatke, radili su brže i dolazili do inovativnijih ideja kada su radili sa ambijentalnim pozadinskim zvukovima.</string>
    <string name="ambient_info3">Koji je idealan nivo pozadinske buke? Odgovor može varirati među pojedincima. Neki ljudi zaista ne uživaju u atmosferi kafića, dok bi drugi mogli napredovati uz relativno visok nivo buke oko sebe. Zbog toga smo se potrudili da Enliven ponudi ponešto za svakoga.</string>
    <string name="ambient_info4">Male količine „smetnji" – tj. buke – su zapravo korisne za mozak. Lagana kiša, žuborenje potoka, klavir, šum televizora, pa čak i povremene vibracije na površini kože pojačavaju našu sposobnost da čujemo, vidimo i osjećamo.</string>
    <string name="meditacija_info">Pokušajte da se opustite. Duboko dišite, istegnite se ili meditirajte. Kroz meditaciju i fokus na disanje opuštate se, te se tako rješavate i stresa.</string>
    <string name="mob_info">Smanjite vrijeme koje provodite koristeći mobitel, gledajući TV ili radeći za računarom. Mnoga istraživanja su pokazala da prekomjerna upotreba mobitela dovodi do povećanja stresa. Također, vrijeme ispred ekrana može negativno utjecati na san, što može dovesti do povećane razine stresa</string>
    <string name="setnja_info">Odvoji malo vremena da se fokusiraš na svoje tijelo, a ne na um, to ti može pomoći da ublažiš anksioznost. Brze vježbe mogu vti pomoći da poboljšaš raspoloženje i smiriš um.</string>
    <string name="pisanje_info">Može biti od pomoći da stvoriš naviku da svaki dan zapisuješ svoje misli i emocije u dnevnik. Sam proces zapisivanja misli može biti smirujući za neke.Međutim, može ti pomoći da pratiš kada doživljavaš anksioznost, kako se osjećaš i šta je izaziva.</string>
    <string name="druzenje_info">Redovno provođenje vremena sa prijateljima i porodicom može ti pomoći da upravljaš svojom anksioznošću. Socijalizacija može pomoći u oslobađanju od stresa, potaknuti osjećaj sreće i zajedništva i smanjiti usamljenost.</string>
    <string name="time_info">Nemoguće je jasno razmišljati kada ste preplavljeni strahom ili anksioznošću. Prvo što treba da uradiš je da odvojiš vrijeme da se fizički smiriš. Udalji se od brige na 15 minuta šetnjom ili kuhanjem šolje čaja.</string>
    <string name="fyf_info">Izbjegavanje strahova samo ih čini strašnijima. Kakav god da je tvoj strah, ako se suočiš s njim, trebalo bi da počne da nestaje.</string>
    <string name="happyplace_info">Odvoji trenutak da zatvoriš oči i zamisliš sigurno i mirno mjesto.</string>
    <string name="perfect_info">Mnogi od nas smatraju da naši životi moraju biti savršeni. Loši dani i neuspjesi će se uvijek dešavati, i važno je zapamtiti da je život nepredvidiv.</string>
    <string name="dosmth_info">Radi stvari u kojima uživaš kao što je igranje sa kućnim ljubimcima ili stvaranje nečega, poput umjetnosti, muzike, rukotvorina, vrtlarstva, mozaika - sve što te angažuje i rezultira nečim što smatraš zadovoljavajućim.</string>
    <string name="pokrenise_info">Kretanje poput hodanja ili trčanja, vježbanja, plesa ili bavljenja sportom pomoći će ti da se osjećaš bolje.</string>
    <string name="crying_info">Neki ljudi se opiru plakanju, međutim plakanje može biti duboko katarzično i blagotvorno; ne samo da plač može biti zadovoljavajući izraz tuge, već može donijeti veću jasnoću o uzroku te tuge. Takođe, nakon plača se osjećamo bolje i smirenije.</string>
    <string name="razgovor_info">Ponekad zadržavanje svega za sebe nije zdravo. Razgovaraj sa svojim prijateljima ili članovima porodice i podijelit teret s nekim. Na kraju ćeš se osjećati bolje.</string>
    <string name="opustanje_info">Vježbaj duboko disanje, zamisli opuštajuću scenu ili ponovi smirujuću riječ ili frazu, kao što je „Smiri se".</string>
    <string name="vrijeme_info">Daj sebi kratke pauze u doba dana koje je obično stresno. Nekoliko trenutaka tihog vremena moglo bi ti pomoći da se osjećaš spremnije da se nosiš s onim što je pred tobom, a da se ne iritiraš ili ljutiš. Udalji se od brige na 15 minuta šetnjom ili kuhanjem šolje čaja. </string>
    <string name="vjezbe_info">Fizička aktivnost može pomoći u smanjenju stresa koji može uzrokovati ljutnju. Ako osjetiš da tvoj bijes eskalira, trči, uradi par vježbi, ili provedi neko vrijeme radeći druge ugodne fizičke aktivnosti.</string>
    <string name="kreativno_info">Pretvori svoj bijes u svoju muzu. Razmisli o slikanju, vrtlarstvu ili pisanju poezije kada osjetiš ljutnju.</string>
    <string name="hrana_info">Konzumiranjem zdrave hrene možeš se osjećati emocionalno jačim. Ciljaj da imaš uravnoteženu prehranu koja uključuje sve glavne grupe hrane.</string>
    <string name="druzise_info">Komunikacija je važna, bilo da je sa prijateljem ili članom porodice. Razgovaranje ti pomaže da se oslobodiš napetosti, umjesto da je zadržiš unutra.</string>
    <string name="uporedivanje_info">Ukoliko se upoređuješ sa drugima možeš doživjeti više nezadovoljstva, niže samopoštovanje, pa čak i depresiju i tjeskobu. Za dobrobit svog unutrašnjeg mira i sreće nemojte se upoređivati sa drugima.</string>
    <string name="priroda_info">Prema istraživanjima provođenje 30 minuta ili više sedmično u prirodi može pomoći u snižavanju krvnog pritiska i šanse za razvoj depresije.</string>
    <string name="san_info">Učini sve što možeš da spavaš dovoljno i da se osjećaš odmorno. Ako ne spavaš dovoljno to može utjecati na tvoje raspoloženje.</string>
    <string name="enter_num">Unesite Vaš broj telefona da započnete</string>
    <string name="verify_num">Molimo Vas unesite Vaš verifikacijski kod.</string>
    <string name="setup_profile">Kreirajte svoj profil</string>
    <string name="enlivenchat">Enliven Social</string>
    <string name="zasto_info">Mnoga istraživanja su pokazala da ćeš se osjećati mnogo bolje ukoliko podijeliš s nekim kako se osjećaš. Zadržavanje svega samo za sebe nije zdravo, potrebno je teret podijeliti i "izbaciti" iz sebe. Enliven ti nudi dvije opcije da podijeliš kako se osjećaš: \n1. Enliven Social \n2. Emotion book</string>
    <string name="social_info">Ukoliko se ne osjećaš ugodno da razgovaraš sa prijateljima, porodicom ili pronađeš stručnu osobu za razgovor Enliven Social ti nudi mogućnost da se povežeš i razgovaraš sa drugim korisnicima.</string>
    <string name="emotion_info">Ukoliko se ne osjećaš ugodno da razgovaraš i dijeliš svoja osjećanja sa bilo kojom osobom, onda ih zapiši. Enliven ti nudi Emotion book gdje možeš voditi dnevnik svojih osjećanja i zapisivanjem "izbaciti" sve iz sebe.</string>
    <string name="meditacija_info1">Meditacija (prema latinskom meditatio, razmišljanje, udubljivanje, usredotočenje) je duhovna vježba u kojoj meditant svoju pažnju sistematično i planski usmjerava prema određenom sadržaju. Meditacija je drevna tehnika kojom se postiže stanje dubokog mira i harmonije, potpunim utišavanjem misli i praćenjem vlastitog disanja.</string>
    <string name="meditacija_info2">Koristi meditacije su mnogobrojne. Mogu biti emocionalne(smanjuje tjeskobu i zabrinutost, ublažava stres, osjećaj straha i usamljenosti te depresiju, povećava samopouzdanje i samoprihvaćanje...) i fizičke(jača imunitet, pročišćava disajni sistem, poboljšava moždane funkcije, snižava krvni pritisak, pridonosi kvaliteti sna).</string>
    <string name="med1_korak1_info"> Sjednite na dekicu ili jastuk, uspravno. Zatvorite oči. Počnite disati mirno, duboko i ujednačeno (udah i izdah su jednako dugi). Osjetite vaše tijelo iznutra. Potom duboko udahnite kroz nos i napunite cijela pluća zrakom pa polako i glasno izdahnite na usta. Ponovite nekoliko puta. Dok s udahom zrak ulazi u vaša pluća, zamislite kako se cijelo tijelo puni pozitivnom energijom, a s izdahom osjetite kako polako nestaje sva napetost iz vašeg tijela.</string>
    <string name="med1_korak2_info"> Nastavite prirodno disati. Svu pažnju usmjerite na zrak koji putuje od vaših nosnica do pluća i natrag. Osjetite kako zrak miluje nosnice. Pratite kako se vaš prsni koš širi i vraća u neutralan položaj. Budite budni promatrač. Što god osjećali u tim trenucima - žuljanje, svrbež, nemir - prihvatite to i dopustite da se događa. Samo nastavite mirno disati. Što duže budete mirno disali, primijetit ćete kako postajete sve opušteniji.</string>
    <string name="med4_korak1_info">Misli i osjećaji koji prolaze kroz Vaš mozak su nepostojani, Vi možete aktivno mijenjati svoj um, usmjeravajući ga prema njegovim najboljim kvalitetama.</string>
    <string name="med4_korak2_info">Radujute se tome kako ste pomogli drugima i drugima uljepšali dane, čak i kroz jednostavne postupke kao što su smiješak, kuhanje ili obavljanje Vašeg posla. Pokušajte se sjetiti što više ovih dobrih postupaka.</string>
    <string name="med4_korak3_info">Radujte se tome kako imate dobro ljude oko sebe koji Vas cijene. Radujte se dobroti koju ste vidjeli na TV-u ili internetu ili o kojoj ste čitali ili su Vam drugi pričali: svemu dobrome čega se možete sjetiti da su drugi danas učinili.</string>
    <string name="med4_korak4_info">Prisjetite se stvari koje biste radije da niste rekli ili učinili. Bez osjećaja krivnje, možemo iskreno požaliti zbog tih postupaka. Možemo razumjeti da su te radnje samo loše navike i možete se odviknuti štetnih navika poput ove kroz meditaciju kao što to sada radite.</string>
    <string name="med4_korak5_info">Zamislite šta se mogli drugačije uraditi danas ili šta se nadate učiniti sljedeći put kada se suočite s istom situacijom. Kako biste drugačije govorili ili postupili? Kako ste mogli ublažiti situaciju umjesto da je pogoršate? Kako biste mogli otpustiti ljutnju i shvatiti da su i drugi vođeni vlastitim lošim navikama, te im oprostiti?</string>
    <string name="med4_korak6_info">Vizualizirajte jarko svjetlo koje se formira iznad tjemena Vaše glave i zamislite da je ono utjelovljenje svih najboljih ljudskih kvaliteta ljubaznosti i suosjećanja te radosnog entuzijazma za činjenje dobra u svijetu.</string>
    <string name="med4_korak7_info">Zamislite da blistavo tekuće svjetlo izlazi iz tog sjajnog svjetla na tjemenu Vaše glave i stapa se u Vaše tijelo. Dok se to događa, sve ono zbog čega žalite postaje poput tamne prašine koja se gura prema dolje i izlazi iz dna vašeg tijela dok se ne ispunite svjetlom.</string>
    <string name="med4_korak8_info">Kada Vaše tijelo bude potpuno ispunjeno svjetlom, zamislite da Vam je potpuno oprošteno. Ne trebate biti pod stresom ili zabrinuti zbog postupaka zbog kojih žalite. Otpustite te probleme i odmah sada otkrijte bolju verziju sebe.</string>
    <string name="med4_korak9_info">Odlučite se kako ćete se ponašati i sutra, budite bolja verzija sebe, a istovremeno ostanite strpljiv i opraštajte sebi. Dobre stvari se događaju polako.</string>
    <string name="med4_korak10_info">Otpustite sve misli kroz koje ste prolazili tijekom meditacije. Lezite, ako već niste, zatvorite oči, naslonite glavu na jastuk i nastavite misliti o sebi, bez tjeskobe, brige i žaljenja.</string>
    <string name="med4_korak11_info">Sada možete mirno spavati. Postanite svjesni svog daha. Postanite svjesni dijelova svog tijela i načina na koji oni dolaze u kontakt s Vašim krevetom. Sa svakim udahom opuštate se sve više dok tonete u dubok, prirodan san.</string>
</resources>