<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/habitsicon"
        android:title="@string/title_item1"

        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/iconmental"
        android:title="@string/title_item2" />

    <item
        android:id="@+id/navigation_notifications"
        android:checkable="false"
        android:icon="@drawable/iconsleep"
        android:title="@string/title_item3" />
    <item
        android:checkable="false"
        android:enabled="true"
        android:title="@string/title_item4"
        android:visible="true" />

</menu>