<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.enliven.ui.home.HomeFragment"
        android:label="@string/title_item1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.enliven.ui.dashboard.DashboardFragment"
        android:label="@string/title_item2"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_moodActivity"
            app:destination="@id/moodActivity" />
        <action
            android:id="@+id/action_navigation_dashboard_to_diaryactivity"
            app:destination="@id/diaryactivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.enliven.ui.notifications.NotificationsFragment"
        android:label="@string/title_item3"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_card1activity"
            app:destination="@id/card1activity" />
    </fragment>
    <activity
        android:id="@+id/card1activity"
        android:name="com.example.enliven.card1activity"
        android:label="activity_card1activity"
        tools:layout="@layout/activity_card1activity" />
    <activity
        android:id="@+id/moodActivity"
        android:name="com.example.enliven.MoodActivity"
        android:label="activity_mood"
        tools:layout="@layout/activity_mood" />
    <activity
        android:id="@+id/diaryactivity"
        android:name="com.example.enliven.diaryactivity"
        android:label="activity_diaryactivity"
        tools:layout="@layout/activity_diaryactivity" />
</navigation>